sandbox-angularjs/styles/demoApp.css
body {
    background: #BBBBBB;
    margin: 0;
    padding: 0;
}

#background {
    /* background: url('../assets/bkgnd.jpg') no-repeat center center; */
    background: #689976;
        background-color: linear-gradient(#689976, #ACDACC);
    height: 100%;
    position: absolute;
    top: 0px;
    width: 100%;
    z-index: -1;
}

header {
    background-color: rgba(10, 10, 10, 0.8);
    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
    color: white;
    height: 90px;
    font-size: 32px;
    margin: 20px 20px 5px;
    padding: 10px 20px 0 40px;
}

header h1 {
    margin: 0;
    padding: 0;
}

nav { margin: 0 20px 5px; }

nav ul {
    background-color: rgba(10, 10, 10, 0.8);
    box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
        -moz-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
        -webkit-box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.8);
    list-style-type: none;
    margin: 5px 0 15px;
    overflow: auto;
    padding: 0 10px;
}

nav ul li {
    float: left;
    margin-left: 5px;
    margin-right: 5px;
}

nav ul li a {
    color: white;
    display: block;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    text-decoration: none;
}

nav ul li a:hover { background-color: #777777; }

#sidebar {
    background-color: rgba(255, 255, 255, 0.9);
    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
    float: right;
    height: 100%;
    margin-right: 20px;
    padding: 5px 10px;
    width: 200px;
}

#content {
    background-color: rgba(255, 255, 255, 0.9);
    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
    margin: 5px 245px 5px 20px;
    padding: 5px 10px;
}

footer {
    background-color: rgba(255, 255, 255, 0.9);
    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -moz-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
        -webkit-box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.8);
    font-size: x-small;
    margin: 5px 20px 20px;
    padding: 5px 10px;
    text-align: center;
}

